﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:
	
	Code Changes:
		-[Core] All exception messages now display the names of generic types in short C# notation. 
		 For instance, messages will now show a name such as IEnumerable<IComparable<Int32>> instead of the
		 unreadable System.Collections.Generic.IEnumerable`1[System.IComparable`1[System.Int32]].
		-[Core] New constructor overload added to the Container allowing to change the behavior of the
		 container using the new ContainerOptions class. The only option currently supported is 
		 AllowOverridingRegistrations.
		-[Core] Container.ExpressionBuilt event added to enable interception scenarios.
		-[Core] InstanceProducers are now allowed to return types that can not be casted to the given service 
		 type. This allows them to be retrieved using the non-generic Container.GetInstance(Type) and is
		 useful for interception scenarios.
		-[Core] Large internal refactoring of the InstanceProducer model. A lot of duplicate code is removed.
	
	Bug Fixes:
		-[Core] InjectProperties and GetRegistration failed in certain circumstances. (work item 16930)
		-[Core] Calling the Verify method still resulted in a lockdown of the container, when the registered
		 delegates called back into the container. This made it impossible to verify a partially configured
		 container.


Version 1.2.0.11273 (v1.2 RTM) 2011-09-30
	General description:
		This release fixes a few small bugs, adds the possibility to do property injection, improves 
		performance and the SimpleInjector.Extensions.dll is now available for Silverlight.

	Project Changes:
		-The solution and projects are converted to Visual Studio 2010. The library is still compatible with
		 .NET 3.5 though.
		-New SimpleInjector.Extensions.Silverlight project was added (and supporting unit test project).
	
	Code Changes:
		-[Extensions] Performance optimization in the RegisterOpenGeneric en RegisterSingleOpenGeneric 